Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -148,7 +148,7 @@ Yves Godd\'eris\textsuperscript{3}
 
 Indonesia and New Guinea (I\&NG) have an outsized influence on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Gaillardet1999a, Hartmann2009a, Hartmann2014a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda Arc system (\citealp{Molnar2015a, Hall2017a}; Fig. \ref{fig:shoreline_growth}). The collision between the Australian-Indian and Eurasian plates and intervening arc terranes has led to the emergence of I\&NG and the exhumation of large supra-subduction ophiolites and associated forearcs in the warm, wet tropics \citep{Macdonald2019a}.
 
-Given that the region is a modern-day hot spot of fresh water and sediment discharge \citep{Milliman2013a} and chemical weathering and \COtwo consumption \citep{Hartmann2009a}, what effect has the emergence of I\&NG had on Earth's geochemical cycles and climate state? If this region was instead under water, would we have a glacial climate today? Based on paleogeographic reconstructions of arc-continent collisions through time, \citet{Macdonald2019a} proposed that arc-continent collisions in the tropics are responsible for increasing planetary weatherability, lowering \pCOtwo and causing the onset of glacial climate states. After the Miocene Climatic Optimum (MCO), a cooling trend began at $\sim$14~Ma associated with the growth of the Antarctic ice sheet, and accelerated over the past 4~m.y. culminating with the onset of northern hemisphere glaciation \citep{Shackleton1984a, Zachos2001a}. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for northern hemisphere glaciation being significantly lower at $\sim$280~ppm \citep{DeConto2008a}. The lower \pCOtwo threshold for northern hemisphere glaciation provides an explanation for southern hemisphere glaciation significantly preceding the development of ice sheets in both hemispheres. We seek to evaluate the hypothesis that the increase of subaerially-exposed land area in I\&NG has played a significant role in lowering \pCOtwo thereby driving this cooling and the development of northern hemisphere ice sheets.
+Given that the region is a modern-day hot spot of fresh water and sediment discharge \citep{Milliman2013a} and chemical weathering and \COtwo consumption \citep{Hartmann2009a}, what effect has the emergence of I\&NG had on Earth's geochemical cycles and climate state? If this region was instead under water, would we have a glacial climate today? Based on paleogeographic reconstructions of arc-continent collisions through time, \citet{Macdonald2019a} proposed that arc-continent collisions in the tropics are responsible for increasing planetary weatherability, lowering \pCOtwo and causing the onset of glacial climate states. After the Miocene Climatic Optimum (MCO), a cooling trend began at $\sim$14~Ma associated with the growth of the Antarctic ice sheet, and accelerated over the past 4~m.y. culminating with the onset of northern hemisphere glaciation \citep{Shackleton1984a, Zachos2001a}. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for northern hemisphere glaciation being significantly lower at $\sim$280~ppm \citep{DeConto2008a}. The lower \pCOtwo threshold for northern hemisphere glaciation provides an explanation for southern hemisphere glaciation significantly preceding the development of ice sheets in both hemispheres. To evaluate the hypothesis that the increase of subaerially-exposed land area in I\&NG has played a significant role in lowering \pCOtwo and the development of northern hemisphere ice sheets, here we use Neogene paleoshoreline reconstructions and couple a weathering model to a climate model to estimate changes \pCOtwo with changes in tropical paleogeography.
 
 Over geologic time-scales, \COtwo enters Earth's ocean/atmosphere system primarily via volcanism and metamorphic degassing of the solid Earth, and leaves it primarily through the chemical weathering of silicate rocks, which delivers alkalinity and cations to the ocean that ultimately result in the consumption of carbon via the precipitation of carbonate rocks \citep{Kump2000a}. However, assessing the effect of the emergence of I\&NG on Earth's \pCOtwo levels can not be determined simply through assessing the present-day chemical weathering fluxes. The steady-state \pCOtwo of Earth is set by the \pCOtwo level at which the sinks of \COtwo are equal to the sources. For example, as \COtwo sinks are removed and \COtwo rises, temperature increases and the hydrological cycle is invigorated, which causes other weathering sinks to increase until a new steady-state is achieved at a higher \pCOtwo. Conversely, the magnitude of the silicate weathering \COtwo sink can be equal to the magnitude of the source at lower steady-state \pCOtwo on a planet with relatively high weatherability than on a planet where it is lower \citep{Kump1997a}.
 
@@ -170,7 +170,7 @@ To explore the sensitivity of global weatherability and climate state to the eme
 
 Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo's of 598-729~ppm (5-95 percentile values), the ``reduced I\&NG'' scenario of 547-638~ppm, and the ``reduced I\&NG + Sunda Shelf'' of 533-611~ppm (Fig. \ref{fig:scenario_pCO2}). These results suggest that without the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, pre-Industrial \pCOtwo would have been $\sim$500-700~ppm. Notably, the effect of the Sunda Shelf on steady-state \pCOtwo is relatively small, given the low Mg+Ca concentration of the lithologies that comprise the Sunda Shelf as well as its low slope. These GEOCLIM \pCOtwo values resemble the higher end of proxy-based \pCOtwo estimates for the early Miocene \citep{Foster2017a}, indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is itself sufficient to explain climate change over the Neogene.
 
-I\&NG are potent sinks of carbon because they contain large swaths of ophiolites that are exposed along E-W belts of tectonic topography in the warm wet tropics. In New Guinea, these paleogeographic features originated in the Middle Miocene with the collision between the Melanesian Arc and the distal margin of Australia \citep{vanUfford2005a, Cloos2005a, Baldwin2012a}, which resulted in the exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. The Middle Miocene (16-14~Ma) basal Markats Formation contains siliciclastic sediment that was transported from the south into the forearc basin associated with the New Guinea ophiolite belt \citep{Cloos2005a}. This precedes, by several million years, the beginning of widespread synorogenic sedimentation to the south and on the Australian continental basement at ca. 12~Ma \citep{vanUfford2005a}. Exhumation of the Central Range accelerated over the past 4~m.y. due to slab-breakoff and buoyant uplift under New Guinea \citep{Cloos2005a}. After arc-continent collision in New Guinea, a left-lateral strike-slip margin developed on the northern margin \citep{Baldwin2012a}. Over the past 4~m.y., this change in plate motion caused the westward extrusion and exhumation of the Cretaceous to Oligocene ophiolites of Obi, Halmahera, and northern New Guinea \citep{Baldwin2012a}. In eastern New Guinea, progressive jamming of the north-dipping subduction zone has caused major uplift over the past 4~m.y. \citep{vanUfford2005a}, which is well dated with a change in provenance from continental to volcanic detritus \citep{Abbott1994a} and thermochronology \citep{Hill1989a}. 
+I\&NG are potent sinks of carbon because they contain large swaths of ophiolites that are exposed along E-W belts of tectonic topography in the warm wet tropics. In New Guinea, these paleogeographic features originated in the Middle Miocene with the collision between the Melanesian Arc and the distal margin of Australia \citep{vanUfford2005a, Cloos2005a, Baldwin2012a}, which resulted in the exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. The Middle Miocene (16-14~Ma) basal Markats Formation contains siliciclastic sediment that was transported from the south into the forearc basin associated with the New Guinea ophiolite belt \citep{Cloos2005a}. This precedes, by several million years, the beginning of widespread synorogenic sedimentation to the south and on the Australian continental basement at ca. 12~Ma \citep{vanUfford2005a}. Arc-continent collision in New Guinea has progressed from west to east. Exhumation of the Central Range accelerated over the past 4~m.y. due to slab-breakoff and buoyant uplift \citep{Cloos2005a}. This was accompanied with a change to left-lateral lateral motion on the northern coast of New Guinea, which caused the exhumation of  ophiolites both along the coast and on the islands Obi and Halmahera \citep{Baldwin2012a}. In eastern New Guinea, progressive jamming of the north-dipping subduction zone has caused major uplift over the past 4~m.y. \citep{vanUfford2005a}, which is well dated with a change in provenance from continental to volcanic detritus \citep{Abbott1994a} and thermochronology \citep{Hill1989a}. 
 
 Most of the non-volcanic islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \citep{Harris2006a, Hall2013a}. In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations \textgreater1~km above sea level with estimated average uplift rates of 1.5~km/m.y. \citep{AudleyCharles1986a}.
 
@@ -189,7 +189,7 @@ However, it is important to acknowledge the limitations of the approach taken in
 
 \section*{ACKNOWLEDGEMENTS \label{sec:ACKNOWLEDGEMENTS}}
 
-We thank Alec Brenner, Sam Lo Bianco, Mariana Lin, and Judy Pu for their contributions to the paleoshoreline reconstructions. Collaborative research between NLS-H and YG was initially supported by the France-Berkeley Fund. FAM and NLS-H thank NSF FRES grant \#20191023 for support. 
+We thank Alec Brenner, Sam Lo Bianco, Mariana Lin, and Judy Pu for their contributions to the paleoshoreline reconstructions. Collaborative research between NLS-H and YG was initially supported by the France-Berkeley Fund. FAM and NLS-H thank NSF FRES grant \#1926001 for support. 
 
 \clearpage
 \newpage
