--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -94,7 +94,7 @@ Yves Godd\'eris\textsuperscript{3}
 
 \linenumbers
 
-These supplementary information materials provide details on the model framework used in this study. Python code used for this study can be found at: \url{https://github.com/Swanson-Hysell-Group/XXX}.
+These supplementary information materials provide details on the model framework used in this study. Code associated with this study can be found at: \url{https://github.com/Swanson-Hysell-Group/XXX}.
 
 \section*{Silicate Weathering Component}
 
@@ -106,7 +106,7 @@ These supplementary information materials provide details on the model framework
 \end{center}
 \end{SCfigure}
 
-The silicate weathering component of the GEOCLIM model implements the model of \cite{Gabet2009a} for the development of a chemically weathered profile. We refer to this chemically weathered profile as regolith where the base of the regolith is the contact with unweathered bedrock. In the model of \citet{Gabet2009a}, material enters the regolith and leaves either as a solute through chemical weathering as a particle transit through the regolith or as a physically weathered particle once it reaches the top. We use the DynSoil implementation of the \cite{Gabet2009a} model which integrates a climatic dependence on the chemical weathering that occurs within the regolith using the formulation of \cite{West2012a}. The transient time-varying versions of this regolith model is described by the following system of three equations which form the basis of DynSoil:
+The silicate weathering component of the GEOCLIM model implements the model of \cite{Gabet2009a} for the development of a chemically weathered profile. We refer to this chemically weathered profile as regolith where the base of the regolith is unweathered bedrock. In the model of \citet{Gabet2009a}, material enters the regolith and leaves either as a solute through chemical weathering as a particle transits through the regolith or as a physically weathered particle once it reaches the top. We use the DynSoil implementation of the \cite{Gabet2009a} model which integrates a climatic dependence on the chemical weathering that occurs within the regolith using the formulation of \cite{West2012a}. The transient time-varying version of this regolith model is described by the following system of three equations which form the basis of DynSoil:
 
 \begin{equation}
     \frac{dh}{dt} = P - E
@@ -133,7 +133,7 @@ The net weathering rate in the regolith column ($W$, m/yr) can then be calculate
     \label{eq:4}
 \end{equation}
 
-The regolith production rate can be expressed as the product of the optimal production rate ($P_{0}$) and the soil production function ($f(h)$):
+The regolith production rate can be expressed as the product of the optimal production rate ($P_{0}$) and a soil production function ($f(h)$):
 
 \begin{equation}
     P = P_{0}\;f(h)
@@ -230,9 +230,9 @@ $x(z)$ gives the curve of primary phases varying with height upward from the bas
     \label{fig:world_lithology}
 \end{figure}
 
-To calculate the flux of Ca and Mg associated with chemical weathering, we need to assign the concentration of Ca and Mg ($\chi_{CaMg}$) within the unweathered bedrock (Fig. \ref{fig:regolith_schematic}). Previous implementations of GEOCLIM have taken bulk continental crust values across all land. Given that the hypothesis we seek to test involves the varying concentration of cations in different lithologies, we have implemented a lithologically resolved version of the model.
+To calculate the flux of Ca and Mg associated with chemical weathering, we need to assign the concentration of Ca and Mg ($\chi_{CaMg}$) within the unweathered bedrock (Fig. \ref{fig:regolith_schematic}). Previous implementations of GEOCLIM have used bulk continental crust values across all exposed land. Given that the hypothesis we seek to test involves the varying concentration of cations in different lithologies, we have implemented a lithologically-resolved version of the model.
 
-The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a}. The raw data takes the form of polygon vectors, where each polygon is assigned one of 16 lithologic categories. We first group these 16 categories into 6 broader categories (metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment; Table \ref{tab:GLiM_to_GEOCLIM}). We then rasterize the polygon vectors to 0.1\degrees $\times$ 0.1\degrees resolution, where each pixel is assigned the lithologic category of the polygon that covers the greatest area in that pixel (i.e. the `mode lithology'; Fig. \ref{fig:world_lithology}). However, to improve the computing time of GEOCLIM, we decrease the resolution of the raster to 0.5\degrees $\times$ 0.5\degrees. To do so, a 3-dimensional 720 $\times$ 360 $\times$ 7 matrix is created, in which the fraction of each 0.5\degrees $\times$ 0.5\degrees pixel that is covered by each of the 6 lithologic categories + water/ice is captured by the extra dimension. In this way, GEOCLIM is able to calculate the area-weighted mean Mg+Ca concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel.
+The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a}. The raw data takes the form of polygon vectors, where each polygon is assigned one of 16 lithologic categories. We first group these 16 categories into 6 broader categories (metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment; Table \ref{tab:GLiM_to_GEOCLIM}). We then rasterize the polygon vectors to 0.1\degrees $\times$ 0.1\degrees resolution, where each pixel is assigned the lithologic category of the polygon that covers the greatest area in that pixel (i.e. the `mode lithology'; Fig. \ref{fig:world_lithology}). However, to improve the computing time of GEOCLIM, we decrease the resolution of the raster to 0.5\degrees $\times$ 0.5\degrees. To do so, a 3-dimensional 720 $\times$ 360 $\times$ 7 matrix is created, in which the fraction of each 0.5\degrees $\times$ 0.5\degrees pixel covered by each of the 6 lithologic categories (or water/ice) is captured by the extra dimension. In this way, we calculate an area-weighted mean Mg+Ca concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel.
 
 \section*{GEOCLIM Calibration}
 
@@ -267,7 +267,7 @@ However, as discussed in the main text, $k_{d}$ (Equation \ref{eq:9}), $k_{w}$ (
 \end{center}
 \end{table}
 
-We then compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg consumption) using present-day runoff, temperature, and slope fields. As described in the main text, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin (HYBAM network) in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}. 80 watersheds in total are used in this study. We then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins:
+We then compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) using present-day runoff, temperature, and slope fields. As described in the main text, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin (HYBAM network) in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}. 80 watersheds in total are used in this study. We then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins:
 
 \begin{equation}
     r^{2} = 1 - \frac{\sum\left[ \log_{10}(M_{i}) - \log_{10}(O_{i}) \right]^{2}}{\sum\left[ \log_{10}(O_{i}) - \overline{\log_{10}(O)} \right]^{2}}
@@ -280,28 +280,92 @@ $M_{i}$ is the modeled \COtwo consumption over watershed $i$, $O_{i}$ is the obs
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/W_vs_r2.pdf}
-    \caption{Modeled global \COtwo consumption vs. the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of the watersheds. Each point represents model output using one of the 78,000 parameter combinations. The right panel is zoomed to the plotting space with the highest $r^{2}$'s.}
+    \caption{\textbf{A)} Modeled global \COtwo consumption vs. the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of the watersheds. Each point represents model output using one of the 78,000 parameter combinations. \textbf{B)} Same as A, but zoomed to the plotting space with positive $r^{2}$'s.}
     \label{fig:W_vs_r2}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/r2_cross_plot.pdf}
-    \caption{Modeled vs. observed \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 3,339 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day. Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 3,339 parameters combinations. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$.}
+    \caption{Modeled vs. observed \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 3,339 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day. Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 3,339 parameters combinations. The red dashed line is the 1:1 line, the blue dashed line is the 2:1 line, and the cyan dashed lines are the 5:1 and 10:1 lines. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$.}
     \label{fig:r2_cross_plot}
 \end{figure}
 
-% HYBAM description and dashed lines
-
-The majority of the original 78,000 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}\textless0.4$, which leaves 3,339 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}). We note that these 3,339 combinations also all produce total global \COtwo consumption estimates that fall within the range of those estimated in the literature for the present-day. However, this is an expected outcome, given that total global \COtwo consumption is often estimated in the literature using the same measured watershed \COtwo consumption that we compare to.
+The majority of the original 78,000 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}\textless0.4$, which leaves 3,339 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}). We note that these 3,339 combinations also all produce total global \COtwo consumption estimates that fall within the range of those estimated in the literature for the present-day. However, this is an expected outcome, given that total global \COtwo consumption is often estimated in the literature using the same measured watershed \COtwo consumption that we compare to.
 
 \section*{Climate Model}
 
-xxx
+We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments \citep{Delworth2006a, Delworth2006b} for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at a 1\degrees $\times$ 1\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively.
+
+\section*{Indonesia and New Guinea Scenarios}
+
+% explanation of construction of lith maps: Sunda Shelf scenario also needs explanation of construction of runoff and slope fields.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{Manuscript/Figures/ING_fracs.jpg}
+    \caption{0.5\degrees $\times$ 0.5\degrees lithologic maps of Indonesia and New Guinea (I\&NG) used to force GEOCLIM. Each column represents a tested scenario. Each row represents a lithologic category. Solid black lines show present-day shorelines.}
+    \label{fig:ING_fracs}
+\end{figure}
 
 \section*{Paleoshorelines}
 
-xxx
+Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in I\&NG. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$. We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citep{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma) and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries, i.e. Early Miocene = 23-16 Ma, Middle Miocene = 15.99-11.61 Ma, Late Miocene = 11.6-5.4 Ma, Pliocene =5.39-3.8 Ma, but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
+
+Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a} and \citet{Hall2018a}, and in New Guinea, we followed \citet{Gold2017a} and \cite{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5 Ma by \citet{Molnar2015a} our calculated area is comparable (Fig. 1). 
+
+\subsection*{Malay Peninsula and Sunda Shelf}
+
+Paleogeographic reconstructions of Peninsular Malaysia suggest that it has been largely exposed over the last 20 Ma (Hall, 2013b; Hall and Nichols, 2002). Although the majority of the Sunda Shelf is currently submerged, large portions of this flat-lying, relatively stable platform of continental crust were also emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum (Hall and Nichols, 2002). Similarities between the terrestrial biotas of Borneo and mainland Southeast Asia confirm the existence of land bridges on the Sunda Shelf throughout the Miocene (Moss and Wilson, 1998). During the Eocene through Early Miocene rifting of the South China Sea resulted in subsidence throughout the Sunda Shelf (Morley and Morley, 2013). Grabens associated with this subsidence became freshwater rift lakes that later transitioned to partially enclosed inland seas and extensive brackish or saline wetland environments. Extensive palynological analysis suggests widespread swamp environments persisting through the Late Miocene (Morley and Morley, 2013). Basement highs (e.g. the Natuna Arch, currently subaerially exposed as the largely granitic island of Natuna off SW Borneo, as well as the granitic Tin Islands south of the Malay Peninsula) are typically bounded by Paleogene to Neogene basins dominated by shallow marine clastic fill (Darmadi et al., 2007). Although most paleogeographic reconstructions of the region incorporate some degree of exposure of the Sunda Shelf from 20 Ma onwards (Hall, 2013b; Madon et al., 2013), Molnar and Cronin (2015) omit the Sunda Shelf from their paleogeographic model for 5 Ma.
+
+\subsection*{Borneo and Palawan}
+
+Our reconstructions of the paleoshorelines of Borneo and Palawan are largely informed by extant paleogeographic constructions detailed in Hall (2001, 2013a, b),  as well as geologic maps and local shoreline reconstructions found in van de Weerd and Armin (1992), Witts et al. (2012), Madon et al. (2013), and Kessler and Jong (2015). Comprised of Paleozoic to Mesozoic crustal components that were largely accreted to Sundaland by the late Cretaceous (Metcalfe, 2013), the southern and western portions of Borneo (SW Kalimantan) have been subaerially exposed throughout the Neogene (Hall, 2013a, b). A collision along the northern margin of Borneo associated with the initiation of rifting in the South China Sea resulted in the late Eocene uplift of the Central Range mountains (Hutchison, 1996), which provide sediment to basins along the Southern (Kalimantan) and northern (Sabah and Sarawak) coasts of the island. In the east, the Barito, Kutei, and Tarakan basins developed as a single area of subsidence (associated with the opening of the Makassar Straits in the Eocene) before the basins were isolated by Oligocene faulting and Miocene uplift (Witts et al., 2012). The Kutei Basin is characterized by eastward-prograding deltaic and shallow shelf deposits that have been steadily supplied with sediment from the Schwaner Mountains of SW Kalimantan and the Central Range (van de Weerd and Armin, 1992). North of the Kutei Basin, the deltaic deposits found in the Tarakan Basin similarly prograde eastward from the mid Miocene onward, fed by the northern drainages of the Central Range (Satyana et al., 1999). In SE Kalimantan, the Barito Basin is bounded to the east by the ophiolite-bearing Meratus Mountains. Sedimentological data suggests that the Meratus Mountains were not emergent until the Late Miocene (Witts et al., 2012).
+Separated from the Paleozoic continental core of SW Borneo by the Lupar Line suture zone, the northern portion of Borneo (Sabah) is underlain by ophiolitic basement that extends to Palawan (Hall et al., 2008; Ilao et al., 2018). The Sarawak Basin and NW Borneo trough offshore Sabah host >10 km-thick Neogene sediementary sequences, indicative of the extent and duration of exhumation in northern Borneo (Hall et al., 2008). The Late Oligocene/Early Miocene Sabah Orogeny resulted in the uplift of both Sabah and southern Palawan (Hall, 2013a), as well as the obduction of the Palawan ophiolite and Telupid ophiolite of northern Sabah. Under-thrusting of thinned passive-margin continental crust beneath these suprasubduction ophiolites resulted in Early to Middle Miocene exhumation and offshore unconformities (Hall et al., 2008). Early Miocene sediments in northern Sabah have a provenance from Palawan (Suggate et al., 2014), indicating that Palawan, like northern Borneo, experienced uplift during the Sabah orogeny. However, initiation of back-arc extension in the Sulu Sea around 19 Ma (Hall, 2013a) resulted in the subsidence of the eastern Palawan Mountains, eliminating or reducing the role of Palawan as a sediment source for the Borneo trough. The 14 Ma Capoas Granite on Palawan and the 7.5 Ma Kinabalu Granite in Sabah are the products of crustal thinning related to pulses of regional backarc extension (Hall, 2013a). Thermochronological data from the Sabah highlands suggest extremely rapid uplift (7km/Myr) and exhumation during the latest Miocene and early Pliocene, resulting in the recent formation of Mt. Kinabalu, the tallest peak in Borneo (Cottam et al., 2013).
+
+\subsection*{Sulawesi}
+
+For the paleoshorelines of Sulawesi, we largely followed the recent stratigraphic compilation and paleoshorelines compilation of Nugraha and Hall (2018). Geographically, Sulawesi can be divided into a central highland region flanked by North, South, Southeast, and East Arms. These arms have high relief >3km that are separated by deep basins and broadly define Sulawesi’s seven tectonic provinces: 1) the West Sulawesi magmatic arc of the South Arm, 2) the Central Sulawesi metamorphic Belt, 3) the Sangihe arc of the North Arm, 4) the East Sulawesi Ophiolite of the East Arm, 5) the southeast metamorphic belt of the Southeast Arm, and the microcontinental blocks of 6) Banggai-Sula and 7) Buton-Tukang Besi (Hamilton, 1979; Katili, 1978). Like SW Borneo, the North and South Arms and much of Central Sulawesi are underlain by continental blocks that rifted off of the Australian-Birds Head margin in the Jurassic and collided in the Cretaceous with Eurasian basement of Sundaland as part of the Woyla Arc system (Hall, 2017; Hennig et al., 2017a; Hennig et al., 2016; Parkinson, 1998b). After collision, subduction polarity reversed and a Cretaceous to Miocene SE-facing volcanic arc developed (Elburg and Foden, 1998; Polvé et al., 1997) that was connected to the paleo-Sunda Arc (Hall, 2002), also referred to as the Great Indonesian arc (Harris, 2006).  The ophiolites of Sulawesi were generated in this arc system in a back arc to intra-arc setting (Monnier et al., 1995) [but see (Kadarusman et al., 2004) for an alternative view], and the largest fragments of the East Sulawesi ophiolite were detached from their metamorphic sole in the late Oligocene (32-28 Ma; Parkinson, 1998a) and thrust to the east above a west dipping slab (East Sulawesi block of Villeneuve et al., 2002). During the Early to Middle Miocene, the Tukang Besi-Buton block began to collide obliquely with the southeastern end of the Sunda Arc, causing ophiolite emplacement in West and SE Sulawesi, including Buton (Bergman et al., 1996; Smith and Silver, 1991). 
+
+The North Arm consists of Late Pliocene and younger volcanic rocks built upon Eocene to Early Miocene oceanic basalt, basaltic andesite, pelagic sediments, and metamorphic rocks (Elburg and Foden, 1998). Eocene to Early Miocene volcanic rocks formed above a NW dipping slab in an arc system that extended to West and South Sulawesi (van Leeuwen and Muhardjo, 2005). Gorontalo Bay is an extensional basin that formed in the Pliocene, and prior to that time, the East Sulawesi was attached to the North Arm of Sulawesi. After the Oligocene to Early Miocene accretion of the East Sulawesi ophiolite, the arc system stepped out to the SE forming a Neogene (23-16 Ma) volcanic belt on the East arm (Kadarusman et al., 2004).  In the Late Miocene, SE-dipping subduction was initiated below the North Arm, which continues today at the North Sulawesi Trough. North Sulawesi was not substantially emergent until the Pliocene (van Leeuwen and Muhardjo, 2005). Active volcanoes extend from the North Arm through the Sangihe Arc into the southern Philippines. 
+
+The East and Southeast Arms consist predominantly of mafic and ultramafic rock of the East Sulawesi Ophoilite that is exposed for more than 10,000 km2 (Monnier et al., 1995). The East Arm preserves a complete ophiolitic sequence underlain by a metamorphic sole, mélange, imbricate continental margin and crystalline basement with a blueschist metamorphic overprint (Monnier et al., 1995; Parkinson, 1998a; Silver et al., 1983). Locally, the structural thickness of the ophiolite exceeds 15 km with surface relief towering over 3 km (Kadarusman et al., 2004). Seventeen igneous K-Ar dates from the East Sulawesi ophiolite range from 93-32 Ma, clustering between 60 and 40 Ma (Parkinson, 1998, and references therein). K-Ar dates on hornblende from the metamorphic sole yielded cooling ages between 36-23 Ma (Parkinson, 1998a; Villeneuve et al., 2002), which dates the initial emplacement of the East Sulawesi ophiolite as the north Sulawesi volcanic arc was underthrusted by the Sula spur (Australian crust) (Parkinson, 1998a; Silver et al., 1983); however, despite these relatively old ages of emplacement, it appears that the ophiolites on the East Arm were not substantially subaerially exposed and exhumed until the Miocene.  
+
+Collision of the Sula-Banggai block with the East margin of Sulawesi began in the latest Miocene and uplift accelerated in the early Pliocene (5.2 to 3.8 Ma) and is associated with a major pulse of sedimentation in adjacent basins (Davies, 1990; Villeneuve et al., 2000). Off the northeast margin of the east arm of Sulawesi, Miocene platform carbonates on the Sula-Banggai block are overlain by Late Miocene to Early Pliocene ophiolite detritus in the Celebes mélange (Davies, 1990). Thus, although the East Sulawesi ophiolite was trapped/emplaced onto the composite Sundaland margin (i.e. a fragment of previously accreted Australian crust) between 36 and 23 Ma, mafic and ultramafic rocks on the south and west arms appear to have not been substantially subaerially exposed in the south and west arms until after 15 Ma, and on the east arm until after 5 Ma.
+
+West Sulawesi rifted from Borneo during the Eocene forming the Makassar Straits back arc basin behind a southwest-facing arc (Polvé et al., 1997). Eroded fragments of ophiolite and extensive belts of volcanic rocks are preserved on the West and South Arms of Sulawesi (Bergman et al., 1996; van Leeuwen et al., 2010). During the Middle Miocene (ca. 15-13 Ma), extensional faults in the Bone basin reversed, which was accompanied by uplift and erosion of the Bone Mountain ophiolite and Lamasi complex in West Sulawesi (Bergman et al., 1996; van Leeuwen et al., 2010). Shortening was likely due to the collision of the leading edge of the Buton-Tukang Besi block, which collided with Buton and the SE Arm of Sulawesi (Smith and Silver, 1991). Uplift and erosion is recorded by the presence of a major Middle Miocene unconformity and sedimentary breccias in marginal basins (Bergman et al., 1996; van Leeuwen et al., 2010). Uplift was diachronous, not effecting units below and to the west of the Lamasai ophiolite until the Middle Miocene (~13 Ma) (van Leeuwen et al., 2010). Alkali volcanism ensued at ca. 11 Ma and is associated with a second phase of extension and exhumation. From the Late Miocene to Pliocene fission track ages imply deep exhumation (Bergman et al., 1996; Smith and Silver, 1991; van Leeuwen et al., 2010).
+
+Fission track ages from granitoids in central Sulawesi indicate rapid uplift of Central Sulawesi (200–700 m/Myr) starting at about 5 Ma associated with movement on the Palo-Koro fault (Bellier et al., 2006). The fault system also shows a normal component with rapid exhumation of rock west of the fault in western Sulawesi – all fission track dates are younger than 5 Ma (Bellier et al., 2006). Just east of the Palo-Koro fault, the Palu Metamorphic Complex was exhumed in the Late Miocene to early Pliocene in the north (~5.3 Ma) and later Pliocene in the south (~3.1–2.7 Ma) at rates of up to 400 m/Myr (Hennig et al., 2017b).
+
+\subsection*{New Guinea and Halmahera}
+
+Paleoshoreline maps were georeferenced from several previous tectonic and paleogeographic analyses, most notably those of Cloos et al. (2005), Gold et al. (2017), Harrington et al. (2017), and Nichols and Hall (1991). These studies were all based to varying degrees on lithological distributions, biostratigraphic, borehole data, and tectonic models. We complimented these data with our stratigraphic compilations for the region to provide further paleoenvironmental context.
+
+Northern New Guinea, including the Melanesian Arc, was emplaced above the Australian plate during the Miocene (Baldwin et al., 2012; Cloos et al., 2005; Hamilton, 1979; van Ufford and Cloos, 2005). Two major ophiolite belts marking the suture—the Irian-Marum ophiolite belt (including the April ultramafics), and the Papuan Ultramafic Belt (PUB)—are preserved along the Central Range and Peninsular Range, respectively. South of the Irian-Marum ophiolites, the Ruffaer Metamorphic Complex constructed from the accretionary wedge, forms the spine of the Central Range (up to ~5 km elevation today).
+
+The Middle Miocene (16–14 Ma) basal Makats Formation contains siliciclastic sediment that was transported from the south into the forearc basin associated with the Irian-Marum ophiolite belt (Cloos et al., 2005; Visser and Hermes, 1962). This precedes, by several million years, the beginning of widespread synorogenic sedimentation to the south and on the Australian continental basement at ca. 12 Ma (van Ufford and Cloos, 2005). Mountain building began in Late Miocene time, ca. 8-7 Ma (Baldwin et al., 2012; van Ufford and Cloos, 2005), but major relief was not generated until the Pliocene (Weiland and Cloos, 1996). Similarly, the Marum ophiolite was uplifted between 8-5 Ma with 3-4 km of denudation (Crowhurst et al., 1996). An estimated 80-100 km of shortening has been accommodated by deformation on the south side of the Central Range (Cloos et al., 2005; Hill and Gleadow, 1989).
+
+Along the Papuan Peninsula of Eastern New Guinea, the PUB was obducted above a north dipping slab during Oligocene arc-continent collision between Australian continental fragments and the Melanesian arc, but remained largely subaqueous until the Miocene (Davies and Jaques, 1984; Davies and Smith, 1971; van Ufford and Cloos, 2005). Miocene to present arc-continent collision in New Guinea has progressed from west to east. Exhumation of the Central Range accelerated over the past 4~m.y. due to slab-breakoff and buoyant uplift (Cloos et al., 2005). This was accompanied with a change to left-lateral lateral motion on the northern coast of New Guinea, which caused the exhumation of ophiolites both along the coast (Monnier et al., 1999) and on the islands Obi (Ali et al., 2001) and Halmahera (Ballantyne, 1992; Hall et al., 1988). In eastern New Guinea, progressive jamming of the north-dipping subduction zone has caused major uplift over the past 4 Ma (van Ufford and Cloos, 2005), which is well dated with a change in provenance from continental to volcanic detritus (Abbott et al., 1994) and thermochronology (Hill and Gleadow, 1989).
+
+In the Bird’s Neck of western New Guinea, the Lengguru foldbelt formed during Middle to Late Miocene CW rotation and obduction of the Weyland Terrane (Bailly et al., 2009). Recent CCW rotation has exhumed several core complexes and has produced Pliocene compressional deformation to the southwest in the Misool-Onin-Kumawa Ridge (Sapin et al., 2009).
+
+\subsection*{Philippines}
+
+Our reconstructions of the paleoshorelines of the Phillipines were primarily informed by paleogeographic reconstructions from Hall (Hall, 1997), coupled with geologic maps of the archipelago (Geological Survey Division, 1963). The Philippine ophiolites have been grouped in four distinct belts (Yumul, 2007). We combine belts 1 and 2 in an eastern suture zone and belts 3 and 4 in a western suture zone (Fig. 3; sutures 11 and 12). Belts 1 and 2 were juxtaposed in the eastern suture zone during sinistral transpression, which resulted in Early Miocene uplift and deposition of coarse clastic sediments (Pubellier et al., 1991). The Palawan microcontinental block and Philippine mobile belt collided during late Early Miocene to early Middle Miocene resulting into the emplacement of the western ophiolites, with exhumation extending from the Late Miocene to the present (Yumul Jr et al., 2013). In addition to collision, arc magmatism contributed significantly to crustal growth in the Philippines (Dimalanta and Yumul, 2003).
+
+\subsection*{Sunda-Banda Arc}
+
+Paleoshoreline reconstructions of the Sunda-Banda Arc system relied largely on the work of Hall (2013b). The Sunda-Banda Arc system is composed of thick sequences of mixed sedimentary rocks and basement intruded and overlain by igneous rocks derived from continual arc magmatism through much of the Cenozoic (Hall, 2017). Sumatra is the largest island within the Sunda-Banda Arc system that stretches from the Andaman Sea in the northwest to the Banda Sea in the east. The western portion of the Sumatra is underlain by the Wolya ophiolite, which was obducted in the Cretaceous and exhumed in the Eocene to Oligocene (Allen et al., 2008), whereas the southeast corner on the islands of Bangka and Belitung is composed of granite basement of the Sunda Shelf (Hall, 2009, 2013b). Java is composed of a complex of E-W-striking deformational and magmatic belts (Audley-Charles, 2004). The belts have a volcanic arc in the south and a continental shelf to the north with an adjacent sedimentary basin (Audley-Charles, 2004). Bali and Flores are mostly volcanic with some sedimentary cover (Hall, 2009).
+
+Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent collision with the subducting Australian Plate (Harris, 2006). From ~20-10 Ma, the majority of Sumatra and nearly all of Java were submerged, although Bangka and Belitung were exposed in addition to a portion of the greater Sunda Shelf, which was at least partially exposed throughout the past 20 Ma (Hall, 2009, 2013b). Six major islands were subaerially exposed before 5 Ma: Sumatra, Belitung, Bangka, Java, Bali, and Flores. However, most of Sumatra and Java were elevated above sea level and emerged to their present exposures only since 5 Ma (Hall, 2009, 2013b). Most of the non-volcanic islands of the Outer Banda Arc emerged after 5 Ma, associated with slab roll-back and collision with the Australian continental margin (Audley-Charles, 2004; Hall, 2013b; Harris, 2006). In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations >1 km above sea level with estimated average uplift rates of 1.5 km/Myr (Audley-Charles, 1986).
+
+\section*{Limitations and future directions}
+
+As with any modeling study, there are limitations with the approach. We consider one of the current limitations to be the climate model component of GEOCLIM that was used in this study (GFDL CM2.0) has a lower spatial resolution (2.0\degrees $\times$ 2.5\degrees) than what can be achieved with the latest climate models and computational resources. Using an updated climate model at higher resolution may result in runoff and temperature fields with different spatial distribution and sensitivities to elevation. 
+
+Another limitation associated with using a modern-day climate model, is that in the scenarios with varying shorelines, we hold the slope and lithology to be the same as the present-day in each pixel. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order. However, implementing high-resolution climate models with both varying shorelines and change in paleogeographic position for these scenarios is valuable future direction. Additionally, such modeling efforts could give insight into whether associated changes in ocean and atmosphere circulation would have significantly modulated precipitation in I\&NG.  
+
+Finally, although the silicate weathering component of GEOCLIM now implements lithology-dependent Ca+Mg concentration, our implementation does not include lithology-dependent kinetics of mineral dissolution. Relative to felsic lithologies, mafic lithologies contain minerals with faster dissolution kinetics (e.g. olivine and plagioclase; see SI), and thus incorporating lithology-dependent kinetics of mineral dissolution into our simulations would likely increase the sensitivity of steady-state \pCOtwo to increases in subaerially-exposed land area and tectonic topography of I\&NG.
 
 \clearpage
 
